--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
 @import url(./blocks/place/__like-btn/place__link-btn.css);
 @import url(./blocks/place/__like-btn/_active/place__like-btn_active.css);
 @import url(./blocks/place/__delete-btn/place__delete-btn.css);
+@import url(./blocks/place/__delete-btn/_visible/place__delete-btn_visible.css);
 @import url(./blocks/place/__title/place__title.css);
 @import url(./blocks/place/__like-container/place__like-container.css);
 @import url(./blocks/place/__like-count/place__like-count.css);
